recursion.logo.sierpinski.Sierpinski.scala.error
Compilation error:
Sierpinski:4: error: not found: value crab
    crab(level-1,length/2)
    ^Sierpinski:6: error: not found: value crab
    crab(level-1,length/2)
    ^