recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  if (level!=0){
    sierpinski(level-1,length/2)
    right(120)
    crab(level-1,length/2)
    left(120)
    crab(level-1,length/2)
    right(120)
  }else{
    forward(length)
}
}